# md-notething

./: Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain  style.scss  tailwind.config.js  tailwind.css
src/: document.rs  main.rs
src-tauri/: tauri.conf.json
web/: mononoki.css  style.scss
