[package]
name = "desktop-app-template"
version = "0.1.0"
authors = ["usa <usagrada@users.noreply.github.com>"]
edition = "2018"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[dependencies]
gloo-console = "0.2.0"
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range", "Node", "DomRect", "NodeList"] }

[dependencies.yew]
version = "0.18.0"
# git = "https://github.com/yewstack/yew.git"
