[package]
name = "desktop-app-template"
version = "0.1.0"
authors = ["usa <usagrada@users.noreply.github.com>"]
edition = "2018"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[dependencies]
gloo-console = "0.2.0"
gloo-timers = "0.2.1"
js-sys = "0.3.55"
pulldown-cmark = "0.8.0"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.9"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }
web-sys = { version = "0.3.55", features = ["CssStyleDeclaration","DocumentFragment", "Range",
"Node", "DomRect", "NodeList", "Performance"] }

[dependencies.yew]
# version = "0.18.0"
git = "https://github.com/yewstack/yew.git"
